--- a/data/conf/default.yaml
+++ b/data/conf/default.yaml
@@ -1,7 +1,7 @@
 seed: 1
 
 encoder:
-  history_dim: 5
+  hist_bins_dim: 5
   pretrained: 'https://dl.fbaipublicfiles.com/librilight/CPC_checkpoints/60k_epoch4-d0f474de.pt'
   freeze: true
   device: 'cuda:0'
@@ -31,9 +31,10 @@ data:
     - 0
   sample_len: 10
   sample_overlap: 2
+  pred_window: 2
   buffer_size: 1600
-  text_path: 'data/swb/swb_ms98_transcriptions'
-  audio_path: 'data/swb/swb_audios'
+  text_path: 'tests/data/pseudo_switchboard/swb_ms98_transcriptions'
+  audio_path: 'tests/data/pseudo_switchboard/swb_audios'
   load_audio: true
   sample_rate: 16000
   mono: true
@@ -45,15 +46,6 @@ trainer:
   accelerator: 'gpu'
 
 training:
-  pred_window: 2
-  n_stride: 100
-  sample_rate: 16000
-
-  checkpoint:
-    monitor: 'val_loss'
-    mode: 'min'
-    dirpath: 'data/model_checkpoints'
-
   optimizer:
     learning_rate: 3.63e-4
     betas:
@@ -67,5 +59,10 @@ training:
 
   early_stopping:
     patience: 20
-    monitor: 'val_loss'
+    monitor: 'train_loss'
     mode: 'min'
+
+  checkpoint:
+    monitor: 'train_loss'
+    mode: 'min'
+    dirpath: 'data/model_checkpoints'
