--- a/data/conf/vap-best.yaml
+++ b/data/conf/vap-best.yaml
@@ -48,11 +48,11 @@ trainer:
   accelerator: 'gpu'
 
 training:
-  class_weight: true
+  class_weight: false
   min_weight: 0.5
 
   optimizer:
-    learning_rate: 0.0001
+    learning_rate: 0.001
     betas:
       - 0.9
       - 0.999
@@ -63,7 +63,7 @@ training:
     train_encoder_epoch: -1
 
   early_stopping:
-    patience: 100
+    patience: 20
     monitor: 'total_f1'
     mode: 'max'
 
