--- a/data/conf/audio-only-best.yaml
+++ b/data/conf/audio-only-best.yaml
@@ -33,7 +33,7 @@ predictor:
   n_heads: 4
   n_layers: 4
   activation: 'gelu'
-  dropout: 0.1
+  dropout: 0.0
   max_len: 1024
   pred_bins:
     - 200
@@ -53,7 +53,7 @@ training:
   min_weight: 0.5
 
   optimizer:
-    learning_rate: 0.001
+    learning_rate: 0.0001
     betas:
       - 0.9
       - 0.999
@@ -62,13 +62,15 @@ training:
     lr_scheduler_freq: 100
     lr_scheduler_tmax: 2500
     train_encoder_epoch: -1
+    train_transformer_epoch: -1
 
   early_stopping:
     patience: 20
-    monitor: 'total_f1'
-    mode: 'max'
+    monitor: 'val_loss'
+    mode: 'min'
 
   checkpoint:
-    monitor: 'total_f1'
-    mode: 'max'
+    monitor: 'val_loss'
+    mode: 'min'
     dirpath: 'data/model_checkpoints'
+
