--- a/data/conf/audio_only_wo_pre-best.yaml
+++ b/data/conf/audio_only_wo_pre-best.yaml
@@ -49,6 +49,9 @@ trainer:
   accelerator: 'gpu'
 
 training:
+  use_audio: true
+  use_text: false
+
   optimizer:
     learning_rate: 0.0001
     betas:
@@ -60,6 +63,7 @@ training:
     lr_scheduler_tmax: 2500
     train_encoder_epoch: -1
     train_transformer_epoch: -1
+    train_llm_epoch: -1
 
   early_stopping:
     patience: 10
