--- a/data/conf/whole.yaml
+++ b/data/conf/whole.yaml
@@ -18,7 +18,7 @@ data:
   sample_overlap: 2
   buffer_size: 1600
   sample_rate: 16000
-  mono: true
+  mono: false
   normalize: true
 
 encoder:
@@ -51,6 +51,7 @@ trainer:
 training:
   use_audio: true
   use_text: true
+  use_multitask: true
 
   bert_dropout: 0.3
   hist_n: 3
@@ -62,7 +63,7 @@ training:
       - 0.999
     weight_decay: 0.001
     lr_scheduler_interval: 'step'
-    lr_scheduler_freq: 1
+    lr_scheduler_freq: 100
     lr_scheduler_tmax: 2500
     train_encoder_epoch: -1
     train_transformer_epoch: 0
@@ -77,4 +78,3 @@ training:
     monitor: 'f1'
     mode: 'max'
     dirpath: 'data/model_checkpoints'
-
