--- a/data/conf/text_only_multitask.yaml
+++ b/data/conf/text_only_multitask.yaml
@@ -45,13 +45,13 @@ predictor:
 
 trainer:
   deterministic: true
-  max_epochs: 5
+  max_epochs: 10
   accelerator: 'gpu'
 
 training:
-  use_audio: true
+  use_audio: false
   use_text: true
-  use_multitask: false
+  use_multitask: true
 
   bert_dropout: 0.3
   hist_n: 3
